Dialog css fixes
- Increase max-width of dialogs to 700px
- Allow dialogs to expand to 90% of the height to take advantage of extra space
- Allow extremely long content in dialogs to scroll, but not hide any bottom buttons out of the view
- Coverage & delete some CSS settings among various dialogs used
- Fix bug where non-json error details text was not formatted pretty in <ErrorDisplay>
- Fix bug that set “undefined” class in <Dialog> when not passing a `contentClass` prop.

--- a/lms/static/styles/components/_FileList.scss
+++ b/lms/static/styles/components/_FileList.scss
@@ -14,6 +14,7 @@ $file-list-icon-size: 24px;
 
 .FileList__spinner {
   position: absolute;
+  margin: 15px;
   left: calc(50% - #{$file-list-icon-size / 2});
   top: calc(50% - #{$file-list-icon-size / 2});
 }
